# demo-rust-async-graphql-acitx-web

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: app.rs  main.rs  sample.rs
src/app/: posts.rs  users.rs
src/sample/: models.rs
